# knowledge-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.local.test  Dockerfile.test  Dockerfile.test.plain  README.md  backlog.md  docker-compose-local-test.yaml  docker-compose-pg.yaml  docker-compose-test-plain.yaml  docker-compose-test.yaml  docker-compose.yaml  docker-test.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: integration.yml  pylint.yml
bookmarklet/: bookmarklet.js  bookmarklet.py  scrap.js
conf/: web
web/: .coveragerc  app.py  cli.py  config.py  run-test.py
web/alembic/: env.py
web/alembic/versions/: 34c59db6d3f2_init_bookmark_table.py  641c3121e66f_adding_col_in_neg.py  6f5aac6f3d53_adding_blog_post_table.py  9cfbb4bc1c28_adding_negotium.py  c0ec04c11057_null_fix.py  ff9a988a72f7_adding_blog_post_private_column.py
web/blog/: __init__.py  auth.py
web/blog/admin/: __init__.py  view.py
web/blog/api/: __init__.py  endpoint.py
web/blog/app/: __init__.py  view.py
web/blog/blogpost/: __init__.py  blogpost.py  crud.py  md_extension.py  model.py  view.py
web/blog/bookmark/: blogpost.py  bookmarklet.md  model.py  summary.py
web/blog/cache/: __init__.py  altsimple.py  base.py  redis.py  simple.py
web/blog/core/: __init__.py  crud.py  indexview.py  templating.py
web/blog/fsrs/: __init__.py  fsrs.py  model.py  readme.md
web/blog/models/: bookmark.py
web/blog/negotium/: __init__.py  crud.py  model.py  view.py
web/blog/planner/: render.py
web/blog/search/: __init__.py  index.py  indexer.py  search.py
web/blog/static/: editor.js  index.js  primary.css
web/blog/templates/: about.html  base.html  blog.html  bookmarklet.html  draft.html  error.html  login.html  main.html  model_edit.html  negchain.html  negchain2.html  negentry.html  negotium.html  negotiums.html  notes.html  preview.html  upload.html
web/blog/utils/: __init__.py  database.py  envvars.py  fake.py  healthcheck.py  paginate.py  sync.py
web/blog/visualization/: timetrend.py  viz.py
web/cache/: __init__.py  simple.py
web/gha/: gha.py
web/search/: __init__.py  search.py
web/test/: conftest.py  test_fake.py  test_models.py  test_simplecache.py  test_templating.py
web/test/test_app/: conftest.py  test_admin.py  test_view.py
web/test/test_application/: conftest.py  test_admin.py  test_api.py  test_view.py
web/test/test_blogpost/: conftest.py  test_blogpost.py  test_crud.py  test_md_extension.py
web/test/test_cache/: conftest.py  test_simplecache.py  utils.py
web/test/test_crud/: conftest.py  test_bookmark.py  (+2 more)
web/test_view/: commons.py  conftest.py  test_blogpost_view.py  test_negotium_view.py
web/utils/: database.py  envvars.py
(+11 files in other folders)
