[tool.poetry]
name = "knowledge-manager"
version = "0.1.0"
description = "personal management system"
authors = ["mushcatshiro <yingjieho@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"
click = "8.1.3"
colorama = "0.4.5"
flask = "2.2.2"
flask-cors = "3.0.10"
greenlet = "2.0.1"
importlib-metadata = "5.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
packaging = "23.0"
six = "1.16.0"
sqlalchemy = "1.4.46"
typing-extensions = "4.3.0"
werkzeug = "2.2.2"
zipp = "3.8.1"
numpy = "1.21.6"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.7"
alembic = "^1.11.2"
markdown = "^3.4.4"
matplotlib = "3.5"
flask-session = "^0.5.0"
redis = "^5.0.1"


[tool.poetry.group.production.dependencies]
gunicorn = "^21.2.0"


[tool.poetry.group.devl.dependencies]
pre-commit = "2.21.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pylint = "^2.17.5"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
