[tool.poetry]
name = "knowledge-manager"
version = "0.1.0"
description = "personal management system"
authors = ["mushcatshiro <yingjieho@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
flask-cors = "^4.0.1"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
markdown = "^3.7"
flask-session = "^0.8.0"
pyjwt = "^2.9.0"
redis = "^5.0.8"


[tool.poetry.group.production.dependencies]
gunicorn = "^23.0.0"


[tool.poetry.group.devl.dependencies]
pre-commit = "2.21.0"
pylint = "^3.2.6"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.1"
pytest-playwright = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
